# 4D-Var

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build.sh
cmake/: FindTP.cmake
debug/: CMakeLists.txt  build.sh
example/direct/: 2x2x2.tp  32x32x32.tp  4x4x4.tp  64x64x64.tp  stenosis.tp  straightTube.tp  unsteady.tp
example/direct/gridCreation/: Ubend.tp  Ubend_bend1.tp  Ubend_bend2.tp  Ubend_direct.tp  Ubend_inlet.tp  Ubend_outlet.tp  Ubend_test_DA.tp  Ubend_test_foward.tp  cavity.tp  stenosis.tp  stenosis_ds.tp  structured.tp  test.tp  unilateralStenosis.tp  unstructured.tp
example/direct/strgrid/: image.cpp
example/direct/usns/: Ubend.tp  Ubend_direct.tp  Ubend_test.tp  cavity.tp  stenosis.tp  stenosis_highRes.tp  stesosis.tp  straightTube.tp  test.tp  unilateralStenosis.tp
example/direct/voxelData/: stenosis.tp
example/direct/voxelDataCreation/: Ubend_direct.tp  Ubend_test.tp  stenosis.tp  stenosis_ds.tp  test.tp  unilateralStenosis.tp
example/flowRate/: plot.py
example/inverse/: stenosis.tp  straightTube.tp  test.tp  test2.tp  unilateralStenosis.tp
example/inverse/4dvar/: Ubend.tp  Ubend_DataCreation.tp  Ubend_bend1.tp  Ubend_bend1_half.tp  Ubend_bend2_half.tp  Ubend_inlet.tp  Ubend_inlet_half.tp  Ubend_outlet_half.tp  Ubend_test.tp  stenosis.tp  stenosis_ds.tp  test.tp  unilateralStenosis.tp
example/inverse/plotCF/: plot.py
example/inverse/plotVelocityProfile/: plot.py
example/inverse/post_4dvar/: plot_MAE_downstream.py  plot_MAE_overall_downstream.py  plot_MAE_overall_upstream.py  plot_MAE_upstream.py  plot_frowRate.py  plot_vMRI_vCFD.py  plot_vMRI_vCFD_diff.py
example/inverse/post_4dvar/calc_error/: plot_Ubend_bend1.py  plot_Ubend_inlet.py
example/inverse/post_4dvar/calc_flowRate/: MRI.cpp  bend.cpp  direct.cpp  plot_MRI.py  plot_bend.py  plot_direct.py  plot_inlet.py
example/inverse/post_4dvar/linear_regression/: plot_Ubend_bend1.py  plot_Ubend_inlet.py
example/inverse/post_4dvar/plot_cost_function/: plot.py
example/inverse/post_4dvar/plot_velocity_profile/: bend.py  inlet.py  plot_tmp.py  tmp_DA.csv  tmp_MRI.csv
example/inverse/preprocess/addGaussianNoise/: main.cpp
example/invese/: stenosis.tp  test.tp
example/postprocess/flowRate/: test.tp
example/stgrid/: test.tp
example/strgrid/: a.out  createImage.cpp  image.cpp  makePoiseuille.cpp  test.tp
example/strgrid/input/: image4x4x4
example/test/: test.tp
example/test/makeDomain/: a.out  image.cpp
example/usns/: cavity.tp  makePoiseuille.tp  stenosis.tp  unilateralStenosis.tp  unsteady.tp
example/voxelData/: test.tp  unilateralStenosis.tp
release/: build.sh
src/app/: CMakeLists.txt
src/app/4dvar/: CMakeLists.txt  main.cpp
src/app/MAE/: CMakeLists.txt  main.cpp
src/app/direct/: CMakeLists.txt
src/app/direct/gridCreation/: CMakeLists.txt  main.cpp  tempCodeRunnerFile.cpp
src/app/direct/usns/: CMakeLists.txt  main.cpp
src/app/direct/voxelDataCreation/: CMakeLists.txt  main.cpp
src/app/domainPartition/: CMakeLists.txt  main.cpp
src/app/flowRate/: CMakeLists.txt  main.cpp
src/app/gridCreation/: CMakeLists.txt  main.cpp
src/app/inverse/: CMakeLists.txt
src/app/inverse/4dvar/: CMakeLists.txt  main.cpp
src/app/inverse/MAE/: CMakeLists.txt  main.cpp
src/app/inverse/flowRate/: CMakeLists.txt  main.cpp
src/app/inverse/initialGuess/: CMakeLists.txt  main.cpp
src/app/postprocess/: CMakeLists.txt
src/app/sns/: CMakeLists.txt
src/app/stgrid/: CMakeLists.txt  main.cpp
src/app/strgrid/: CMakeLists.txt  main.cpp
src/app/test/: CMakeLists.txt  main.cpp
src/app/usns/: CMakeLists.txt  main.cpp
src/app/voxelData/: CMakeLists.txt  main.cpp
src/app/voxelDataCreation/: CMakeLists.txt  main.cpp
src/include/mesh/: Cell.h  Grid.h
src/include/tools/: Array.h
src/lib/: CMakeLists.txt
src/lib/boundary/: Boundary.cpp  Boundary.h  CMakeLists.txt
src/lib/common/: Array.h  CMakeLists.txt  Define.h  Function.h  Gauss.h  MathCommon.cpp  MathCommon.h  MathFEM.cpp  MathFEM.h  MathTool.cpp  MathTool.h  MyMPI.h  Polynomial.cpp  Polynomial.h  ShapeFunction.h  SignalHandler.h  SignalHnadler.cpp  Spline.cpp  Spline.h  Tool.h  VTKCellType.h
src/lib/config/: CMakeLists.txt  Config.cpp  Config.h  GridFiltering.cpp  ReadTP.cpp  StrBoundarySetting.cpp  StrGridSetting.cpp  TextReader4DVar.cpp  TextReaderGridCreation.cpp  TextReaderInterface.cpp  TextReaderPost4DVar.cpp  TextReaderUSNS.cpp  TextReaderVoxelDataCreation.cpp
src/lib/direct/: AssemblyUSNS.cpp  CMakeLists.txt  Direct.h  DirectProblem.cpp  DirectProblem.h  MatrixAssemblyUSNS.cpp  MatrixPreparation.cpp  Postprocess.cpp  Postprocess.h  Test.cpp  USNS.cpp  USNS_optimized_BCs.cpp  USNS_polynomial_BCs.cpp  initialize.cpp
src/lib/export/: CMakeLists.txt  Export.h  ExportBIN.inl  ExportDAT.cpp  ExportDAT.inl  ExportVTI.cpp  ExportVTI.inl  ExportVTU.cpp  ExportVTU.inl
src/lib/fem/: CMakeLists.txt  FEM.cpp  FEM.h
src/lib/fileIO/: BIN.cpp  BIN.inl  CMakeLists.txt  DAT.cpp  DAT.inl  FileIO.h  VTI.cpp  VTI.inl  VTK.h  VTU.cpp  VTU.inl
src/lib/import/: Import.h  ImportBIN.inl  ImportDAT.inl  importDAT.inl
src/lib/inverse/: Adjoint.cpp  Adjoint.h  AdjointUSNS.cpp  AssemblyAdjoint.cpp  CMakeLists.txt  Initialize.cpp  InverseProblem.cpp  InverseProblem.h  MatrixAssemblyAdjointUSNS.cpp  OptimalCondition.cpp  Output.cpp
src/lib/mesh/: CMakeLists.txt  Cell.cpp  Cell.h  DataGrid.cpp  DataGrid.h  DataGridX.cpp  DataGridX.h  Grid.cpp  Grid.h  Node.cpp  Node.h  NumericalVelocitySpace.cpp  NumericalVelocityTime.cpp  Observed.h  Octree.h
src/lib/outputtools/: CMakeLists.txt  OutputTools.h  VTIStructuredGrid.cpp
src/lib/postprocess/: CMakeLists.txt  PostDirect.cpp  PostDirect.h  PostInverse.cpp  PostInverse.h  PostInverseProblem.cpp  PostInverseProblem.h  VoxelDataCreation.cpp  VoxelDataCreation.h
src/lib/preprocess/: CMakeLists.txt  GridCreation.cpp  GridCreation.h  PreDirect.cpp  PreDirect.h
src/lib/solver/: CMakeLists.txt  Eigen.h  MySolver.h  PetscSolver.cpp  PetscSolver.h
src/lib/tools/: Array.h
src/lib/vtk/: CMakeLists.txt  VTI.cpp  VTK.h  VTU.cpp
test/: CMakeLists.txt  main.cpp
(+69 files in other folders)
