add_subdirectory(boundary)
add_subdirectory(common)
add_subdirectory(config)
add_subdirectory(direct)
add_subdirectory(inverse)
add_subdirectory(mesh)
add_subdirectory(solver)
add_subdirectory(fileIO)
add_subdirectory(import)
add_subdirectory(export)
add_subdirectory(preprocess)
add_subdirectory(postprocess)
add_subdirectory(fem)